:necktie: Run cpac_correlations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ section-order = ["future", "standard-library", "third-party", "collab", "other-f
 
 [tool.ruff.lint.isort.sections]
 "collab" = []
-"other-first-party" = ["cpac_regression_dashboard"]
+"other-first-party" = ["cpac_correlations", "cpac_regression_dashboard"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
