--- a/.github/workflows/correlate.yaml
+++ b/.github/workflows/correlate.yaml
@@ -83,4 +83,4 @@ jobs:
             YAML_FILE="${WORKSPACE}/${{ inputs.ref }}_${{ inputs.data_source }}.yml"
             CORRELATE=$(sbatch --parsable --dependency=afterok:"${CREATE_YAML}" --wrap "cpac_correlations --data_source ${{ inputs.data_source }} --branch ${{ inputs.ref }} $YAML_FILE")
             export TESTING_OWNER=$(echo ${{ env.SLURM_TESTING_REPO }} | cut -d'/' -f1)
-            sbatch --dependency=afterok:"${CORRELATE}" --dependency=afterok:"$BUILD_SLURM_JOB" --export="OWNER=${{ inputs.OWNER }},REPO=${{ inputs.repo }},SHA=${{ inputs.ref }},TESTING_OWNER=${TESTING_OWNER}" --wrap "cpac_regsuite_generate_comment"
+            sbatch --dependency=afterok:"${CORRELATE}" --dependency=afterok:"$CORRELATE" --export="OWNER=${{ inputs.OWNER }},REPO=${{ inputs.repo }},SHA=${{ inputs.ref }},TESTING_OWNER=${TESTING_OWNER}" --wrap "cpac_regsuite_generate_comment"
