--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,8 @@ repos:
   rev: v1.8.0
   hooks:
   - id: mypy
+    additional_dependencies:
+      - types-requests
 
 - repo: https://github.com/bwhmather/ssort
   rev: 0.12.4
