--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ fail_fast: false
 repos:
 
 - repo: https://github.com/rhysd/actionlint
-  rev: v1.6.26
+  rev: v1.7.4
   hooks:
   - id: actionlint
 
@@ -78,3 +78,10 @@ repos:
     language: fail
     files: \.yml$
     exclude: \.markdownlint\.yml
+  - id: local-fork-repo-url
+    name: Sync local fork repository URL
+    language: python
+    files: .*
+    entry: .github/scripts/local_fork_repo_url.py
+    additional_dependencies:
+      - gitpython
