:closed_lock_with_key: Give match-target-repo write permission

--- a/.github/workflows/match_target_repository.yaml
+++ b/.github/workflows/match_target_repository.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   update-repo-url:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
