--- a/.github/workflows/match_target_repository.yaml
+++ b/.github/workflows/match_target_repository.yaml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_BASE_LOGIN: ${{ github.event.pull_request.base.repo.owner.login }}
           GITHUB_BASE_REPO_NAME: ${{ github.event.pull_request.base.repo.name }}
           GITHUB_REPO: ${{ github.event.pull_request.head.repo.full_name }}
-          GH_PAT: ${{ secrets.GH_PAT }}
+          PUSH_PAT: ${{ secrets.PUSH_PAT }}
           HEAD_REF: ${{ github.head_ref }}
         run: |
           TARGET_REPO_URL="https://github.com/${GITHUB_BASE_LOGIN}/${GITHUB_BASE_REPO_NAME}"
@@ -34,7 +34,7 @@ jobs:
           # Commit and push changes
           git config --local user.email "88335502+ChildMindInstituteCNL@users.noreply.github.com"
           git config --local user.name "🐈 Theodore"
-          git remote set-url --push origin "https://${GH_PAT}@github.com/${GITHUB_REPO}"
+          git remote set-url --push origin "https://${PUSH_PAT}@github.com/${GITHUB_REPO}"
           git add pyproject.toml
           git commit -m ":twisted_rightwards_arrows: Update repository URL to PR target."
           git push origin HEAD:"${HEAD_REF}"
