--- a/.github/workflows/match_target_repository.yaml
+++ b/.github/workflows/match_target_repository.yaml
@@ -1,7 +1,7 @@
 name: Update Repository URL
 
 on:
-  pull_request:
+  pull_request_target:
 
 jobs:
   update-repo-url:
@@ -17,8 +17,9 @@ jobs:
           GITHUB_BASE_LOGIN: ${{ github.event.pull_request.base.repo.owner.login }}
           GITHUB_BASE_REPO_NAME: ${{ github.event.pull_request.base.repo.name }}
           GITHUB_REPO: ${{ github.event.pull_request.head.repo.full_name }}
-          PUSH_PAT: ${{ secrets.PUSH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HEAD_REF: ${{ github.head_ref }}
+
         run: |
           TARGET_REPO_URL="https://github.com/${GITHUB_BASE_LOGIN}/${GITHUB_BASE_REPO_NAME}"
 
@@ -34,7 +35,7 @@ jobs:
           # Commit and push changes
           git config --local user.email "88335502+ChildMindInstituteCNL@users.noreply.github.com"
           git config --local user.name "🐈 Theodore"
-          git remote set-url --push origin "https://${PUSH_PAT}@github.com/${GITHUB_REPO}"
+          git remote set-url --push origin "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPO}"
           git add pyproject.toml
           git commit -m ":twisted_rightwards_arrows: Update repository URL to PR target."
           git push origin HEAD:"${HEAD_REF}"
