--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cpac_slurm_testing"
-version = "0.1.0.dev1"
+version = "1.0.0"
 description = "Run C-PAC regression tests via Slurm."
 authors = ["Amy Gutierrez <58920810+amygutierrez@users.noreply.github.com>", "Jon Clucas <jon.clucas@@childmind.org>"]
 license = "LGPL-2.1"
@@ -13,7 +13,7 @@ generate-setup-file = false
 script = "./src/cpac_slurm_testing/__init__.py"
 
 [tool.poetry.dependencies]
-cpac_regression_dashboard = {git = "https://github.com/shnizzedy/dashboard.git", branch = "correlate_D3"}
+cpac_regression_dashboard = {git = "https://github.com/FCP-INDI/C-PAC_regression_dashboard.git"}
 gitpython = ">=3.1.40"
 pygithub = ">=2.4.0"
 python = ">=3.10"
